--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,27 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
-org.gradle.parallel=true
-
-# Fabric Properties
-# check these on https://fabricmc.net/develop
-minecraft_version=1.21.4
-yarn_mappings=1.21.4+build.2
-loader_version=0.16.9
+org.gradle.jvmargs = -Xmx2G
+org.gradle.parallel = true
 
 # Mod Properties
-mod_version=1.0.0+1.21.4
-maven_group=mei.arisuwu.chickensgivefeathers
-archives_base_name=chickens-give-feathers
+mod_id = chickensgivefeathers
+mod_name = Chickens Give Feathers
+mod_version = 1.0.1
+mod_license = GPL-3.0-or-later
+mod_authors = ArisuwuMei
+mod_description = This mod make the chickens drop feathers when they lay an egg!
+mod_icon_path = assets/chickensgivefeathers/icon.png
+maven_group = io.github.arisuwumei.chickensgivefeathers
+archives_name = chickens-give-feathers
+enabled_platforms = fabric,neoforge
+
+# Minecraft properties
+minecraft_version = 1.21.4
+yarn_mappings = 1.21.4+build.2
 
 # Dependencies
-fabric_version=0.112.2+1.21.4
+java_version = 21
+architectury_api_version = 15.0.1
+fabric_api_version = 0.112.2+1.21.4
+fabric_loader_version = 0.16.9
+neoforge_version = 21.4.9-beta
+yarn_mappings_patch_neoforge_version = 1.21+build.4
