--- a/neoforge/src/main/resources/META-INF/neoforge.mods.toml
+++ b/neoforge/src/main/resources/META-INF/neoforge.mods.toml
@@ -1,5 +1,5 @@
 modLoader = "javafml"
-loaderVersion = "[4,)"
+loaderVersion = "[1,)"
 issueTrackerURL = "https://github.com/ArisuwuMei/ChickensGiveFeathers/issues"
 license = "$license"
 
@@ -14,13 +14,13 @@ logoFile = "$icon"
 [[dependencies.$id]]
 modId = "neoforge"
 type = "required"
-versionRange = "[$neoforge_version_range,)"
+versionRange = "[0.0,)"
 ordering = "NONE"
 side = "BOTH"
 
 [[dependencies.$id]]
 modId = "minecraft"
 type = "required"
-versionRange = "[$minecraft_version,)"
+versionRange = "[1.21.2,)"
 ordering = "NONE"
 side = "BOTH"
