Port to versions prior to 1.21.2

--- a/gradle.properties
+++ b/gradle.properties
@@ -15,13 +15,13 @@ archives_name = chickens-give-feathers
 enabled_platforms = fabric,neoforge
 
 # Minecraft properties
-minecraft_version = 1.21.4
-yarn_mappings = 1.21.4+build.2
+minecraft_version = 1.21
+yarn_mappings = 1.21+build.2
 
 # Dependencies
 java_version = 21
 architectury_api_version = 15.0.1
-fabric_api_version = 0.112.2+1.21.4
+fabric_api_version = 0.102.0+1.21
 fabric_loader_version = 0.16.9
-neoforge_version = 21.4.9-beta
+neoforge_version = 21.0.167
 yarn_mappings_patch_neoforge_version = 1.21+build.4
