--- a/neoforge/src/main/resources/META-INF/neoforge.mods.toml
+++ b/neoforge/src/main/resources/META-INF/neoforge.mods.toml
@@ -11,6 +11,9 @@ authors = "$authors"
 description = "$description"
 logoFile = "$icon"
 
+[[mixins]]
+config = "chickensgivefeathers.mixins.json"
+
 [[dependencies.$id]]
 modId = "neoforge"
 type = "required"
@@ -21,6 +24,6 @@ side = "BOTH"
 [[dependencies.$id]]
 modId = "minecraft"
 type = "required"
-versionRange = "[1.21.2,)"
+versionRange = "[,1.21.2)"
 ordering = "NONE"
 side = "BOTH"
